--- a/front-react/src/index.css
+++ b/front-react/src/index.css
@@ -13,7 +13,7 @@ code {
 }
 .container {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   /* flex-wrap: wrap; */
   justify-content: center;
   column-gap: 60px;
