--- a/front-react/src/index.css
+++ b/front-react/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 10;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -19,9 +19,22 @@ code {
   column-gap: 60px;
   align-items: center;
   margin-left: 550px;
-  width: 900px;
+  width: 600px;
 }
-
+.top {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  column-gap: 30px;
+  align-items: center;
+  margin-left: 550px;
+  width: 600px;
+}
+.input {
+  width: 190px;
+  height: 30px;
+}
 .title {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: 200;
@@ -30,6 +43,7 @@ code {
 .one {
   border: solid 0.3em;
   border-color: black;
+  margin-left: 600px;
 }
 .price {
   font-size: x-large;
