--- a/front-react/src/style/css/sideBar.css
+++ b/front-react/src/style/css/sideBar.css
@@ -20,7 +20,6 @@
 }
 
 .sideBar .listofImages {
-  background-color: brown;
   width: 66vw;
 }
 
@@ -47,4 +46,36 @@
 .filter input {
   padding: 15px;
   margin: 10px;
+}
+.listofImages {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.blockOfImages {
+  background-color: aqua;
+  flex: 0.92;
+}
+.loadMore {
+  flex: 0.08;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.blockOfImages,
+.loadMore {
+  width: 100%;
+}
+
+.loadMore span {
+  border: 1px solid black;
+  background-color: transparent;
+  padding: 1.5vh;
+}
+
+.loadMore :hover {
+  background-color: black;
+  color: white;
 }
