--- a/front-react/src/style/css/slider.css
+++ b/front-react/src/style/css/slider.css
@@ -48,7 +48,18 @@
   transform: translateY(19vh);
   position: relative;
 }
+.images img {
+  position: absolute;
+  left:0;
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
 
+}
+.traspanrent {
+  opacity: 0;
+}
 .arrow {
   position: relative;
   width: 100%;
