--- a/front-react/src/style/css/discount.css
+++ b/front-react/src/style/css/discount.css
@@ -1,5 +1,5 @@
 .discount {
-    background-color: rgb(41, 179, 221,0.4);
+    background-color: rgb(41, 179, 221, 0.4);
     width: 96vw;
     margin-left: 2vw;
     margin-right: 2vw;
@@ -9,44 +9,52 @@
     align-items: center;
     justify-content: space-between;
 }
+
 .smallContainer {
     width: calc((96vw - 1vw) / 2);
     height: 80%;
 }
+
 .fit-container {
-width: 47.5vw;
-height: 45vh;    
+    width: 47.5vw;
+    height: 45vh;
 }
+
 .secondSmallContainer {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     flex-direction: column;
-    
 }
+
 .nestedContainer {
     text-transform: uppercase;
     width: 35vw;
     padding: 5px;
 }
+
 .afterLine {
     min-height: 5vh;
     font-size: 1.2rem;
     padding: 2px;
     text-align: justify;
 }
+
 .HTilte {
     font-size: 2.5rem;
     font-weight: bold;
 }
+
 .secondSmallContainerForImage {
     height: 100%;
 }
+
 .shopNow {
-    height:6vh ;
+    height: 6vh;
     position: relative;
 }
-.shopNow .shopBtn{
+
+.shopNow .shopBtn {
     position: absolute;
     background-color: transparent;
     border: 1px solid black;
@@ -57,10 +65,10 @@ height: 45vh;
     top: 0px;
     bottom: 0;
     text-align: center;
-    font-size: 1.2rem;   
+    font-size: 1.2rem;
 }
 
 .shopBtn:hover {
     background-color: black;
-    color :white
+    color: white
 }
