--- a/front-react/src/style/css/featuredItems.css
+++ b/front-react/src/style/css/featuredItems.css
@@ -1,4 +1,4 @@
-.featuredItems  {
+.featuredItems {
     height: 60vh;
     width: 96vw;
     margin-left: 2vw;
@@ -9,41 +9,37 @@
     flex-direction: column;
 }
 
-
-.container-featuredItems {
-}
-
+.container-featuredItems {}
 
 .first-container {
-  
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 10%;    
+    height: 10%;
 }
+
 .Items-style {
     font-size: 1.5rem;
 }
+
 .second-container {
     height: 90%;
     background-color: khaki;
 }
+
 .container-arrow {
-
-height: 100%;
-width: 5vw;
-display: flex;
-align-items: center;
-justify-content: space-between;
-
+    height: 100%;
+    width: 5vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
+
 .container-arrow-style {
-  
     font-size: 0.938rem;
-    border: 1px solid grey ;
+    border: 1px solid grey;
     padding: 0.6rem;
     width: 2.4vw;
     align-items: center;
-
     text-align: center;
 }
