--- a/front-react/src/style/css/footer.css
+++ b/front-react/src/style/css/footer.css
@@ -2,7 +2,46 @@
   width: 100%;
   height: 75vh;
   background-color: black;
-  color :white;  
-    transform: translateY(35rem);
+  color: white;
+  transform: translateY(35rem);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+.first-footer-container , .third-footer-container,.second-footer-container {
+    width:100% ;
+}
 
+
+.first-footer-container {
+  height: 12vh;
+  background-color: rgb(13, 56, 56);  
+}
+
+.second-footer-container {
+    height: calc(56vh);
+    background-color: brown;
+}
+
+.third-footer-container {
+    position: relative;
+    height: 6vh;
+    display: flex;
+    justify-content: flex-start;
+    font-size: 0.8rem;
+    align-items: center;
+   
+}
+.third-footer-container-text {
+    margin-left: 1vw;
+}
+
+
+.third-footer-container::after {
+    content: '';
+    position: absolute;
+    top: -1px;
+    border: 1px solid grey;
+    width:99% ;
 }
